--- a/BudgieBudgeting/Properties/launchSettings.json
+++ b/BudgieBudgeting/Properties/launchSettings.json
@@ -13,7 +13,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:5185",
+      "applicationUrl": "http://localhost:5185/",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
