Update azure-pipelines-2.yml for Azure Pipelines

--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -1,12 +1,10 @@
-# ASP.NET
-# Build and test ASP.NET projects.
-# Add steps that publish symbols, save build artifacts, deploy, and more:
-# https://docs.microsoft.com/azure/devops/pipelines/apps/aspnet/build-aspnet-4
-
 trigger:
-- pre-production
+  branches:
+    include:
+      - pre-production
 
-pool: Default
+pool:
+  vmImage: 'ubuntu-latest'
 
 variables:
   solution: '**/*.sln'
