--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -29,3 +29,9 @@ steps:
   inputs:
     platform: '$(buildPlatform)'
     configuration: '$(buildConfiguration)'
+    
+- task: DotNetCoreCLI@2
+  inputs:
+    command: 'test'
+    projects: '**/*.csproj'
+    testRunTitle: 'Testing'
