Update azure-pipelines-2.yml for Azure Pipelines

--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -34,4 +34,4 @@ steps:
   inputs:
     command: 'test'
     projects: '**/*.csproj'
-    testRunTitle: 'Testing'
+    testRunTitle: 'Testing Suite'
