--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -5,7 +5,6 @@ trigger:
 
 pool: Default
 
-
 variables:
   solution: '**/*.sln'
   buildPlatform: 'Any CPU'
@@ -29,9 +28,10 @@ steps:
   inputs:
     platform: '$(buildPlatform)'
     configuration: '$(buildConfiguration)'
-    
+
 - task: DotNetCoreCLI@2
   inputs:
     command: 'test'
     projects: '**/*.csproj'
+    arguments: '--no-build --configuration $(buildConfiguration)'
     testRunTitle: 'Testing Suite'
