Began Selinium Tests

--- a/BudgieBudgeting/appsettings.json
+++ b/BudgieBudgeting/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "",
   "ConnectionStrings": {
-    "BudgieBudgetingContext": "Server=tcp:budgie-budgeting.database.windows.net,1433;Initial Catalog=Budgie;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;Authentication=Active Directory Default;"
+    "BudgieBudgetingContext": "Server=tcp:budgie-budgeting.database.windows.net,1433;Initial Catalog=Budgie;Persist Security Info=False;User ID=Budgie;Password=Budgeting12345;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   }
 }
