Update azure-pipelines-2.yml for Azure Pipelines

--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -35,7 +35,7 @@ steps:
         SonarCloud: 'SonarCloudForBusgie'
         organization: 'budgie702'
         scannerMode: 'dotnet'
-        cliProjectKey: 18d85e22c8543fe3723472408509589ced6c638a
+        cliProjectKey: '18d85e22c8543fe3723472408509589ced6c638a'
 
 - task: SonarCloudAnalyze@3
   inputs:
