Update Docker setup and project configuration
- Update .dockerignore to exclude unnecessary files and directories
- Set Docker default target OS to Windows in BudgieBudgeting.csproj
- Add Dockerfile for building and running the .NET application
- Update launchSettings.json to configure Docker profile and remove redundant settings

--- a/BudgieBudgeting/BudgieBudgeting.csproj
+++ b/BudgieBudgeting/BudgieBudgeting.csproj
@@ -5,6 +5,7 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>699b05e8-c74f-4738-843e-88bdd995cc82</UserSecretsId>
+    <DockerDefaultTargetOS>Windows</DockerDefaultTargetOS>
   </PropertyGroup>
 
   <ItemGroup>
@@ -22,6 +23,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
     <PackageReference Include="Moq" Version="4.20.72" />
   </ItemGroup>
 
