--- a/BudgieBudgeting/BudgieBudgeting.csproj
+++ b/BudgieBudgeting/BudgieBudgeting.csproj
@@ -9,12 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <COMReference Include="{bee4bfec-6683-3e67-9167-3c0cbc68f40a}">
-      <WrapperTool>tlbimp</WrapperTool>
-      <VersionMinor>4</VersionMinor>
-      <VersionMajor>2</VersionMajor>
-      <Guid>bee4bfec-6683-3e67-9167-3c0cbc68f40a</Guid>
-    </COMReference>
+    <!-- Remove the COMReference item -->
   </ItemGroup>
 
   <ItemGroup>
